# Graphics_OpenGL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Main.cpp  Makefile  OpenGL_2_2018_2019.cbp  README.md  cmake_install.cmake  common_header.h  dirLight.cpp  dirLight.h  flyingCamera.cpp  flyingCamera.h  glfw_OpenGLApp.cpp  glfw_OpenGLApp.h  main.cpp  openGLControl.cpp  openGLControl.h  pointLight.cpp  pointLight.h  renderScene.cpp  shaders.cpp  shaders.h  skybox.cpp  skybox.h  spotLight.cpp  spotLight.h  static_geometry.cpp  static_geometry.h  texture.cpp  texture.h  vertexBufferObject.cpp  vertexBufferObject.h
data/shaders/: color.vert  dirLight.frag  main_shader.frag  main_shader.vert  pointLight.frag  spotLight.frag
